--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Packliste</h1>
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-12">
           Hello World
         </div>
       </div>
