--- a/index.html
+++ b/index.html
@@ -12,10 +12,35 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          Hello World
+          <p class="text-center">Hello World</p>
+          <table class="table" id="mytable">
+            <tr>
+              <th>Item</th>
+              <th>Check?</th>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
+    <script type="text/javascript">
+    var table = document.getElementById("mytable");
+      for (var i = 0, row; row = table.rows[i]; i++) {
+       //iterate through rows
+       //rows would be accessed using the "row" variable assigned in the for loop
+       for (var j = 2, col; col = row.cells[j]; j++) {
+         //iterate through columns
+         //columns would be accessed using the "col" variable assigned in the for loop
+         if (j % 2 != 0) {
+           <div class="checkbox">
+             <label>
+               <input type="checkbox" id="blankCheckbox" value="option1">
+             </label>
+           </div>
+         }
+       }  
+    }
+    </script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
