--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Packliste</title>
   </head>
   <body>
-    <h1>Packliste</h1>
+    <h1 class="text-center">Packliste</h1>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -18,29 +18,57 @@
               <th>Item</th>
               <th>Check?</th>
             </tr>
+            <script type="text/javascript">
+              var items = [
+              "Ticket",
+              "Zelt",
+              "Pavillon",
+              "Stuhl",
+              "Schlafsack",
+              "Isomatte",
+              "kleines Kissen",
+              "Klamotten",
+              "Taschenlampe",
+              "Wasserkanister",
+              "Duct Tape",
+              "Gaskocher",
+              "Einwegbesteck",
+              "Topf",
+              "Wasser",
+              "Dosenöffner",
+              "Grüner Tee",
+              "Instant Kaffee",
+              "Feuchttücher",
+              "Snacks für's Frühstück",
+              "Zahnbürste",
+              "Klopapier",
+              "Shampoo",
+              "Deo",
+              "Verhütungsmittel",
+              "Sonnenbrille",
+              "Hartstoff",
+              "Vier Fruchtsäfte im Tetra",
+              "Bierchen",
+              "Einwegkamera",
+              "Feuerzeuge",
+              "Papellis",
+              "Handtuch",
+              "Sonnencreme",
+              "Konserven für 4 Tage",
+              "Kaugummis / Fisher Mens",
+              "Bargeld",
+              "Musikbox",
+              "Kleiner Ball",
+              "Edding"];
+
+              for (var i = 0; i < items.length; i++) {
+                document.write('<tr><td>' + items[i] + '</td>' + '<td>' + <div class="checkbox"><label><input type="checkbox" id="blankCheckbox" value="option1" aria-label="..."></label></div> + '</td></tr>');
+              }
+            </script>
           </table>
         </div>
       </div>
     </div>
-    <script type="text/javascript">
-    var table = document.getElementById("mytable");
-      for (var i = 0, row; row = table.rows[i]; i++) {
-       //iterate through rows
-       //rows would be accessed using the "row" variable assigned in the for loop
-       for (var j = 2, col; col = row.cells[j]; j++) {
-         //iterate through columns
-         //columns would be accessed using the "col" variable assigned in the for loop
-         if (j % 2 != 0) {
-           <div class="checkbox">
-             <label>
-               <input type="checkbox" id="blankCheckbox" value="option1">
-             </label>
-           </div>
-         }
-       }  
-    }
-    </script>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
