--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               "Edding"];
 
               for (var i = 0; i < items.length; i++) {
-                document.write('<tr><td>' + items[i] + '</td>' + '<td>' + <div class="checkbox"><label><input type="checkbox" id="blankCheckbox" value="option1" aria-label="..."></label></div> + '</td></tr>');
+                document.write('<tr><td>' + items[i] + '</td></tr>');
               }
             </script>
           </table>
