--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Packliste</title>
   </head>
   <body>
+    <img src="images/total90.jpg" class="img-responsive img-rounded">
     <h1 class="text-center">Packliste</h1>
     <div class="container">
       <div class="row">
@@ -64,8 +65,6 @@
                 document.write('<tr><td>' + items[i] + '</td>' +
                   '<td><div class="checkbox"><label><input type="checkbox" id="blankCheckbox" value="option1"></label></div></td></tr>');
               }
-
-
             </script>
           </table>
         </div>
