--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Packliste</title>
   </head>
   <body>
-    <img src="images/total90.jpg" class="img-responsive img-rounded">
-    <h1 class="text-center">Packliste</h1>
+    <h1 class="text-center"><img src="images/total90.jpg" class="img-responsive">Packliste</h1>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
