--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Packliste</title>
   </head>
   <body>
-    <h1 class="text-center"><img src="images/total90.jpg" class="img-responsive">Packliste</h1>
+    <img src="images/total90.jpg" class="img-responsive" style="text-align:center">
+    <h1 class="text-center">Packliste</h1>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
