--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Packliste</title>
   </head>
   <body>
-    <img src="images/total90.jpg" class="img-responsive" style="text-align:center">
+    <a href="https://www.paypal.me/senseiyukisan/1" target="_blank"><img src="images/total90.jpg" class="img-responsive" style="width: 100px; display: block; margin: 0 auto;"></a>
     <h1 class="text-center">Packliste</h1>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <table class="table" id="mytable">
+          <table class="table" id="mytable" style="background-color: black; color: #ff00bf;">
             <tr>
               <th>Item</th>
               <th>Check?</th>
