--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
               "Isomatte",
               "kleines Kissen",
               "Klamotten",
+              "Handy",
+              "Aufladekabel",
+              "Powerbank",
+              "Trichter",
               "Taschenlampe",
               "Wasserkanister",
               "Duct Tape",
@@ -47,7 +51,7 @@
               "Verhütungsmittel",
               "Sonnenbrille",
               "Hartstoff",
-              "Vier Fruchtsäfte im Tetra",
+              "Fruchtsäfte im Tetra",
               "Bierchen",
               "Einwegkamera",
               "Feuerzeuge",
