--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <table class="table" id="mytable" style="background-color: black; color: #ff00bf;">
             <tr>
               <th>Item</th>
-              <th>Check?</th>
+              <th>Check?</th
             </tr>
             <script>
               var items = [
