--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <table class="table" id="mytable" style="background-color: black; color: #ff00bf;">
             <tr>
               <th>Item</th>
-              <th>Check?</th
+              <th>Check?</th>
             </tr>
             <script>
               var items = [
@@ -65,7 +65,7 @@
               "Kleiner Ball",
               "Edding"];
 
-              for (var i = 0; i < items.length; i++) {
+              for (var i = 0; i < item.length; i++) {
                 document.write('<tr><td>' + items[i] + '</td>' +
                   '<td><div class="checkbox"><label><input type="checkbox" id="blankCheckbox" value="option1"></label></div></td></tr>');
               }
