--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               "Kleiner Ball",
               "Edding"];
 
-              for (var i = 0; i < item.length; i++) {
+              for (var i = 0; i < items.length; i++) {
                 document.write('<tr><td>' + items[i] + '</td>' +
                   '<td><div class="checkbox"><label><input type="checkbox" id="blankCheckbox" value="option1"></label></div></td></tr>');
               }
