--- a/index.html
+++ b/index.html
@@ -66,10 +66,36 @@
               "Edding"];
 
               for (var i = 0; i < items.length; i++) {
-                document.write('<tr><td>' + items[i] + '</td>' +
+                document.writue('<tr><td>' + items[i] + '</td>' +
                   '<td><div class="checkbox"><label><input type="checkbox" id="blankCheckbox" value="option1"></label></div></td></tr>');
               }
+
             </script>
+            <tr>
+              <td>"Hallo"</td>
+            </tr>
+            <tr>
+              <td>"zahnbürste"</td>
+            </tr>
+            <tr>
+              <td>"Hallo"</td>
+            </tr>
+            <tr>
+              <td>"Hallo"</td>
+            </tr>
+            <tr>
+              <td>"Hallo"</td>
+            </tr>
+            <tr>
+              <td>"Hallo"</td>
+            </tr>
+            <tr>
+              <td>"Hallo"</td>
+            </tr>
+            <tr>
+              <td>"Hallo"</td>
+            </tr>
+
           </table>
         </div>
       </div>
