--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               "Edding"];
 
               for (var i = 0; i < items.length; i++) {
-                document.writue('<tr><td>' + items[i] + '</td>' +
+                document.write('<tr><td>' + items[i] + '</td>' +
                   '<td><div class="checkbox"><label><input type="checkbox" id="blankCheckbox" value="option1"></label></div></td></tr>');
               }
 
