--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
               "Kaugummis / Fisher Mens",
               "Bargeld",
               "Musikbox",
+              "Zigaretten",
+              "Müllbeutel",
+              "Schloss für das Zelt",
+              "Personalausweis",
+              "Trinkbehälter für Mische",
               "Kleiner Ball",
               "Edding"];
 
